# rdfind

./: .gitignore  ChangeLog  Checksum.cc  Checksum.hh  ChecksumTypes.hh  Fileinfo.cc  Fileinfo.hh  Makefile.am  NEWS  Options.cc  Options.hh  README.md  Rdutil.cc  Rdutil.hh  VERSION.txt  configure.ac  do_cmake_format.sh  rdfind.1  rdfind.cc  release_new_version.txt
.github/workflows/: clang18.yml  clang20.yml  cmake-clang18.yml  debian-forky.yml  debian-trixie.yml  formatting.yml
ci/: build_32bit.sh  build_libc++.sh  build_with_latest_nettle.sh
inofficial_cmake/: CMakeLists.txt
testcases/: common_funcs.sh  md5collisions.sh  sha1collisions.sh  verify_nochecksum.sh  verify_size_savings.sh  verify_skipfirstbytes.sh
unittests/: test_checksum.cc  test_options.cc
